gitea/stateful-set.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: gitea

spec:
  serviceName: gitea
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
        - name: gitea
          image: gitea
          args:
            - gitea
            - web
            - --config /etc/gitea/config/app.ini
          ports:
            - containerPort: 3000
              name: http
            - containerPort: 22
              name: ssh
          volumeMounts:
            - mountPath: /etc/gitea/config/app.ini
              name: config
              subPath: app.ini
            - mountPath: /data
              name: data
      volumes:
        - name: config
          configMap:
            name: config
        - name: data
          hostPath:
            path: /srv/gitea/data
      nodeSelector:
        kubernetes.io/hostname: moto-a1-3
