gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea

spec:
  type: ClusterIP
  ports:
    - targetPort: ssh
      name: ssh
      port: 22
    - targetPort: http
      name: http
      port: 80
  selector:
    app: gitea
