gitea/ssh-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea

spec:
  type: LoadBalancer
  ports:
    - targetPort: ssh
      name: ssh
      port: 2200
  selector:
    app: gitea
