gitea/ssh-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: gitea-ssh

spec:
  entryPoints:
    - gitea-ssh
  routes:
    - match: HostSNI(`*`)
      services:
        - namespace: gitea
          name: gitea
          port: ssh
          weight: 1
